--- a/styles/style.css
+++ b/styles/style.css
@@ -6,10 +6,10 @@
   font-style: normal;
 }
 
-#history-list li {
+/* #history-list li {
     padding: 15px 5px;
     margin: 10px 11px;
     border-radius: 6px;
     background-color: rgb(250, 248, 248);
-}
+} */
 
